--- a/website/index.html
+++ b/website/index.html
@@ -7,8 +7,8 @@
     <title>Cool website</title>
 </head>
 <body>
-    <h1>This website is cool</h1>
-    <p>Welcome!</p>
+    <h1>This website is2cool</h1>
+    <p>Welcome to this site!</p>
     <p>Sebastian!</p>
 </body>
 </html>
