--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,6 @@
     <h1>This website is2cool</h1>
     <p>Welcome to this site!</p>
     <p>Sebastian!</p>
-    <p>By Simon!</p>
+    <p>By Simon...lmao!</p>
 </body>
 </html>
